fix: 🐛 overflow that was causing a 1px scroll on all pages

--- a/Components/UI/Layout/Footer/Footer.module.css
+++ b/Components/UI/Layout/Footer/Footer.module.css
@@ -4,7 +4,6 @@
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 50px;
 }
 
 .footer p {
